--- a/ProjetJeuxMVC/Views/Shared/_Layout.cshtml
+++ b/ProjetJeuxMVC/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using ProjetJeuxMVC.Infrastructures;
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mon application ASP.NET</title>
+    <title>@ViewBag.Title PLAY - EXCHANGE - PLAY </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -17,14 +18,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nom d'application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("PLAY - EXCHANGE - PLAY", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("À propos de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+                    <li>
+                        @{ if (UtilisateurSession.utilisateur != null)
+                            {@Html.Label($"Bienvenue {UtilisateurSession.utilisateur.Nom} ")}
+                            else { @Html.ActionLink("S'identifier", "Login", "Auth")}
+                            }
+                        </li>
+
+                    </ul>   
             </div>
         </div>
     </div>
